--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/core": "^6.4.13",
+    "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/routers": "^6.1.9",
+    "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
     "react": "18.2.0",
     "react-native": "^0.72.7",
+    "react-native-file-access": "^3.0.5",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.2.0",
@@ -27,7 +32,8 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
