--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "^0.72.7",
     "react-native-file-access": "^3.0.5",
     "react-native-fs": "^2.20.0",
+    "react-native-google-mobile-ads": "^13.0.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.2.0",
