--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/core": "^6.4.13",
+    "@react-navigation/core": "^6.4.14",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/routers": "^6.1.9",
     "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "^0.72.7",
     "react-native-file-access": "^3.0.5",
     "react-native-fs": "^2.20.0",
