Help and rate us Done

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.2.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
