--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/routers": "^6.1.9",
     "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-native": "^0.72.7",
     "react-native-file-access": "^3.0.5",
     "react-native-fs": "^2.20.0",
     "react-native-google-mobile-ads": "^13.0.2",
+    "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.2.0",
