--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Expense Manager: Easy",
-  "displayName": "Expense Manager: Easy",
+  "name": "expensemanger",
+  "displayName": "expensemanger",
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-3791007458121855~3390357113"
   }
