--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,19 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.0"
+        // buildToolsVersion = "29.0.0"
+        // minSdkVersion = 21
+        // compileSdkVersion = 33
+        // targetSdkVersion = 33
+
+        // // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        // ndkVersion = "23.1.7779620"
+         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 33
-        targetSdkVersion = 33
-
-        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        targetSdkVersion = 34
         ndkVersion = "23.1.7779620"
+        
     }
     repositories {
         google()
